--- a/BulkyBooks/appsettings.json
+++ b/BulkyBooks/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=;Database=BulkyBook;User Id=your_user;Password=Sidmecha_94"
+  }
 }
